<resources>
    <string name="app_name">VersePlay</string>
    <string name="str_verse_play">VERSE PLAY</string>
    <string name="str_back_press_info">\'뒤로\'버튼을 한번 더 누르시면 종료됩니다.</string>
    <string name="str_common_finish_app_notice">VERSE PLAY 앱을\n종료하시겠습니까?</string>
    <string name="str_finish">종료</string>
    <string name="str_cancel">취소</string>
    <string name="str_confirm">확인</string>
    <string name="str_follow">팔로우</string>
    <string name="str_following">팔로잉</string>
    <string name="str_follower">팔로워</string>
    <string name="str_share">공유</string>
    <string name="str_report">신고</string>
    <string name="str_blocking">차단</string>
    <string name="str_no_interested">관심없음</string>
    <string name="str_already_no_interested">이미 관심 없음 처리된 콘텐츠 입니다.</string>
    <string name="str_singing">부르기</string>
    <string name="str_more">더 보기</string>
    <string name="str_solo">솔로</string>
    <string name="str_duet">듀엣</string>
    <string name="str_battle">배틀</string>
    <string name="str_group">그룹</string>
    <string name="str_normal">일반</string>
    <string name="str_ad">광고</string>
    <string name="str_start">시작</string>
    <string name="str_comment">댓글</string>
    <string name="str_delete">삭제</string>
    <string name="str_modify">수정</string>
    <string name="str_logout">로그아웃</string>
    <string name="str_next">다음</string>
    <string name="str_prev">이전</string>
    <string name="str_hash_tag"># 해시태그</string>
    <string name="str_counsel">문의하기</string>
    <string name="str_re_join">재가입하기</string>
    <string name="str_join_battle">배틀하기</string>
    <string name="str_join_duet">듀엣하기</string>
    <string name="str_permission_denied">권한이 거부되었습니다.</string>
    <string name="str_show_config">노출 설정</string>
    <string name="str_announcement">안내</string>
    <string name="str_tab_feed">Feed</string>
    <string name="str_tab_recommend">Recommend</string>
    <string name="str_navi_main">메인</string>
    <string name="str_navi_sing_pass">씽패스</string>
    <string name="str_navi_community">커뮤니티</string>
    <string name="str_navi_mypage">마이페이지</string>
    <string name="network_popup_default">문제가 발생하였습니다.\n일시적인 현상이거나 네트워크 문제일 수 있으니\n잠시 후 다시 시도해 주세요.\n\n이 현상이 지속된다면\n“마이페이지> 설정> 의견 보내기”를\n통해 관리자에게 문의해 주세요.</string>
    <string name="network_status_rs001">정상 처리되었습니다.</string>
    <string name="network_popup_undefined">예상하지 못한 문제가 발생하였습니다.\n잠시 후 다시 시도 해주세요.</string>
    <string name="network_status_rs002">요청 처리에 실패하였습니다.</string>
    <string name="network_status_rs003">인증 정보가 유효하지 않습니다.</string>
    <string name="network_status_rs004">필수 인자가 전달되지 않았습니다.</string>
    <string name="network_status_rs005">서버 상태가 비정상입니다.</string>
    <string name="event_night_time_agree_title">이벤트 혜택 알림 수신 동의</string>
    <string name="event_night_time_agree_contents">핫한 콘텐츠와 최신 이벤트 소식을 가장 먼저 알려드립니다.</string>
    <string name="event_night_time_agree_switch_title">야간에도 알림 받기</string>
    <string name="event_night_time_agree_switch_sub_title">오후 9시 ~ 오전 8시</string>
    <string name="common_login_popup_title_text_string">VERSE PLAY 로그인 또는\n회원가입을 해주세요.</string>
    <string name="common_login_popup_signing_up_info_text_string1">가입하면 VERSE PLAY&#160;</string>
    <string name="common_login_popup_signing_up_info_text_string2">&#160;및&#160;</string>
    <string name="common_login_popup_signing_up_info_text_string3">에</string>
    <string name="common_login_popup_signing_up_info_text_string4">동의하신 것으로 간주됩니다.</string>
    <string name="common_login_popup_signing_up_info_text_agree"><u>이용약관</u></string>
    <string name="common_login_popup_signing_up_info_text_privacy"><u>개인정보 처리방침</u></string>
    <string name="common_login_popup_sign_in_with_kakao">카카오 로그인</string>
    <string name="common_login_popup_sign_in_with_naver">네이버 로그인</string>
    <string name="common_login_popup_sign_in_with_google">구글 로그인</string>
    <string name="common_login_popup_sign_in_with_facebook">페이스북 로그인</string>
    <string name="common_login_popup_sign_in_with_Twitter">트위터 로그인</string>
    <string name="common_login_popup_sign_in_with_Snapchat">스냅챗 로그인</string>
    <string name="start_verseplay">VERSE PLAY 시작하기</string>
    <string name="permission_notice_title">VERSE PLAY 서비스 이용을 위해\n다음과 같은 접근 권한이 필요합니다.</string>
    <string name="permission_notice_selection">선택적 접근권한</string>
    <string name="permission_notice_essential">필수적 접근권한</string>
    <string name="str_permission_internet">인터넷</string>
    <string name="str_permissions_internet_contents">네트워크(인터넷) 상태 확인</string>
    <string name="str_permission_network">네트워크</string>
    <string name="str_permission_network_contents">네트워크 상태 확인</string>
    <string name="str_permission_wifi">WiFi</string>
    <string name="str_permission_wifi_contents">와이파이 네트워크 상태 확인</string>
    <string name="str_permission_call">전화</string>
    <string name="str_permission_call_contents">노래 부르기 시, 전화 수신 상태 확인</string>
    <string name="str_permission_mic">마이크</string>
    <string name="str_permission_mic_contents">노래 부르기 시, 녹음 및 녹화 사용</string>
    <string name="str_permission_camera">카메라</string>
    <string name="str_permission_camera_contents">노래 부르기 시, 동영상 녹화 및 사용자 프로필 촬영</string>
    <string name="str_permission_storage">저장소</string>
    <string name="str_permission_storage_contents">갤러리 접근, 사용자 프로필 이미지 변경, \n개인 동영상 업로드, 게시판 이미지 업로드</string>
    <string name="str_permission_bluetooth">블루투스</string>
    <string name="str_permission_bluetooth_contents">노래 부르기 시, 녹음 및 녹화 사용</string>
    <string name="permission_notice_selectable_access_description">
        <![CDATA[<font color="#222222" style="bold">선택적 접근권한</font><font color="#666666">은 해당 기능을 사용할 때, 허용이 필요하며,<br/>비 허용시에도 해당 기능 외 서비스 이용만 가능합니다.</font>]]>
    </string>
    <string name="social_login_info_naver_client_name">네이버 아이디 로그인</string>
    <string name="setting_verse_country">활동 국가를 선택해주세요.</string>
    <string name="setting_verse_lan1">VERSE PLAY에서 사용할</string>
    <string name="setting_verse_lan2">언어를 선택해주세요.</string>
    <string name="str_intro_help_country">VERSE PLAY 서비스는 각 나라의 노래 저작권 정책에 따라 서비스가 적용됨을 알려드립니다.</string>
    <string name="str_intro_help_language">VERSE PLAY 언어 지원은 메뉴 및 설정, 기타 버튼, 이용가이드만 지원하고 가사 번역은 지원하지 않음을 알려드립니다.</string>
    <string name="str_help_nickname">닉네임은 VERSE PLAY에서 사용될 ID입니다. 설정 후 변경이 불가능하오니 이 점 유의하시길 바랍니다. 건너뛰기 시 SNS ID 또는 기본 아이디로 설정됩니다.</string>
    <string name="start_sign_up_or_sign_in">로그인 / 회원가입</string>
    <string name="tutorial_next">NEXT</string>
    <string name="tutorial_start">START</string>
    <string name="tutorial_singpass_sub_title">PLAY의 왕좌가 될 쟁탈전</string>
    <string name="tutorial_singpass_title">씽패스</string>
    <string name="tutorial_sing_sub_title">내 손안의 노래방이 열린다</string>
    <string name="tutorial_sing_title">노래 부르기</string>
    <string name="tutorial_album_sub_title">내 특별한 영상 공유</string>
    <string name="tutorial_album_title">개인 앨범 업로드</string>
    <string name="tutorial_community_sub_title">자유로운 표현과 소통의 장</string>
    <string name="tutorial_community_title">커뮤니티</string>
    <string name="tutorial_mypage_sub_title">나만의 개성을 표현하는</string>
    <string name="tutorial_mypage_title">마이페이지</string>
    <string name="fmt_feed_contents_more"><u>더보기</u></string>
    <string name="fmt_feed_contents_hide"><u>숨기기</u></string>
    <string name="str_song_contents_upload">노래 콘텐츠 업로드</string>
    <string name="str_album_contents_upload">앨범 동영상 업로드</string>
    <string name="str_ad_detail">자세히보기</string>
    <string name="str_block_user">%s님을 차단하시겠습니까?</string>
    <string name="str_block_feed">현재 피드를 차단할까요?</string>
    <string name="str_block_complete">차단되었습니다.</string>
    <string name="str_block_user_complete">차단되었습니다.\n마이페이지에서 차단을 해제할 수 있습니다.</string>
    <string name="str_uninterested_feed">비슷한 동영상이 적게 표시됩니다.</string>
    <string name="str_deleted_detail_feed">해당 콘텐츠는 삭제되었거나\n비공개 처리된 콘텐츠입니다.</string>
    <string name="str_can_not_like_my_feed">나의 콘텐츠는 좋아요할 수 없습니다.</string>
    <string name="str_can_not_like_my_book_mark">나의 콘텐츠는 즐겨찾기할 수 없습니다.</string>
    <string name="str_can_remove_my_page">삭제는 마이페이지에서 할 수 있습니다.</string>
    <string name="str_block_feed_msg">차단된 피드는 향후 노출되지 않습니다.</string>
    <string name="str_not_interested_feed">이와 비슷한 피드는 향후 적게 표시됩니다.</string>
    <string name="setting_mypage_logout_string">로그아웃</string>
    <string name="Would_like_to_log_out">로그아웃 하시겠습니까?</string>
    <string name="sign_nickname_explain1">VERSE PLAY에서 사용할</string>
    <string name="sign_nickname_explain2">닉네임을 설정해주세요.</string>
    <string name="sign_hint_enter_nickname">예) 노래하는고라니</string>
    <string name="sign_nickname_error_already">이미 사용중인 닉네임입니다.</string>
    <string name="sign_location_back_message">회원가입을 중단하시겠습니까? \n지금 중단하면 진행된 내용이 \n모두 삭제됩니다.</string>
    <string name="sign_location_back_help">닉네임은 VERSE PLAY에서 사용될 ID입니다. 설정 후 변경이 불가능하오니 이 점 유의하시길 바랍니다. 건너뛰기 시 SNS ID 또는 기본 아이디로 설정됩니다.</string>
    <string name="sign_nickname_auto_creating">닉네임 자동 생성하기</string>
    <string name="sign_nickname_check_duplication">중복 확인</string>
    <string name="sign_nickname_signup">가입 완료</string>
    <string name="video_encode_check_mypage">업로드가 완료되면 알림이 도착합니다.</string>
    <string name="videoupload_picker_title">동영상 업로드</string>
    <string name="video_upload_max_duration" formatted="false">%d분 %d초 이하의 동영상만 업로드\n할 수 있습니다.</string>
    <string name="videoupload_view_title">새 콘텐츠 등록</string>
    <string name="upload_completed">업로드가 완료되었습니다.</string>
    <string name="upload_completed_star">업로드하신 콘텐츠의 별점은 아래와 같습니다.</string>
    <string name="upload_completed_star_off_sing">부르신 콘텐츠의 별점은 아래와 같습니다.</string>
    <string name="upload_completed_nick1"><![CDATA[<font color=#2fc2ff><b>%s</b></font>]]>님께서 업로드하신 콘텐츠의 별점은 아래와 같습니다.</string>
    <string name="upload_completed_nick2"><![CDATA[<font color=#2fc2ff><b>%s</b></font>]]>님께서 부르신 콘텐츠의 별점은 아래와 같습니다.</string>
    <string name="upload_completed_nick3"><![CDATA[<font color=#2fc2ff><b>%s</b></font>]]>님께서 업로드하신 콘텐츠가 정상 게시되었습니다.</string>
    <string name="upload_completed_star_grade">참 잘했어요 :)</string>
    <string name="upload_completed_star_1">숨소리만 들려요 ;ㅁ;</string>
    <string name="upload_completed_star_2">공기반 소리반 ;ㅅ;</string>
    <string name="upload_completed_star_3">내 목소리가 우주에 닿을듯 !!</string>
    <string name="upload_completed_star_desc">한 곡을 모두 다 부르시면 별 3개를 획득하실 수 있습니다.</string>
    <string name="upload_album_completed">업로드하신 콘텐츠가 정상 게시되었습니다.</string>
    <string name="filter_order_by_recommend">추천순</string>
    <string name="filter_order_by_latest">최신순</string>
    <string name="song_main_title_recently">최근 불렀던 노래</string>
    <string name="str_recent_song_no_data">최근에 불렀던 노래가 없습니다.</string>
    <string name="feed_no_result_data">해당 정보가 없습니다.</string>
    <string name="lounge_write_link_hint">연결할 URL을 입력해주세요.</string>
    <string name="lounge_write_link_invalid">올바른 형식의 url을 입력해주세요.</string>
    <string name="membership_footer_title"><Data><![CDATA[<font color=#222222><b>이용권 간단 안내</b></font>]]></Data></string>
    <string name="membership_footer"><Data><![CDATA[
    <br>- <font color=#222222><b>기간 이용권</b></font>은 각 이용권에 부여된 혜택을 정해진 기간에만 사용할 수 있는 이용권입니다.<br>
    <br>- <font color=#222222><b>곡 이용권</b></font>은 이용권에 표시된 숫자의 수 만큼 노래 반주음을 사용할 수 있는 이용권입니다.<br>
    <br>- 결제를 취소할 경우,구글 앱스토어의 구독 결제 취소 정책을 따르게 됩니다.<br>
    <br>- 결제 내역은 구글 앱스토어에서 확인할 수 있습니다.<br>
    <br>- 결제 중,소지하고 있는 스마트폰의 OS가 변경 되어 APP 사용 문제가 있는 경우 verseplay.com으로 문의해주세요.<br>
    <br>※ 모든 이용권은 보유 중에도 다른 이용권을 추가로 구매할 수 있으며, 기간 이용권 우선 사용 후 곡 이용권 순으로 소진됩니다.<br>
    ]]></Data></string>
    <string name="membership_tj_footer_title">티제이미디어(주)</string>
    <string name="membership_tj_footer"><Data><![CDATA[
    <p>대표 : 윤나라<br>
    사업자등록번호 : 130-81-44332<br>
    통신판매업신고번호 : 2022-서울마포-0937<br>
    주소 : 서울시 마포구 월드컵북로 434 상암 IT Tower 8층<br>
    이메일 : cs@verseplay.com</p>
    ]]></Data></string>
    <string name="singing_now">지금 부르기</string>
    <string name="memberShip_footer_terms1">※ 자세한 내용은&#160;</string>
    <string name="memberShip_footer_terms2">에서 확인하세요.</string>
</resources>