<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.verse.app.contants.EtcTermsType" />

        <import type="com.verse.app.contants.ListPagedItemType" />

        <variable
            name="viewModel"
            type="com.verse.app.ui.mypage.viewmodel.MemberShipViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_subsc"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:focusable="false"
            android:splitMotionEvents="false"
            app:dataList="@{viewModel.subscribeList.validPeriodSubsList}"
            app:itemType="@{ListPagedItemType.ITEM_MEMBERSHIP}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:viewModel="@{viewModel}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:itemCount="5"
            tools:listitem="@layout/item_membership" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/rv_subsc">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_55"
                    android:drawableTop="@drawable/ic_empty"
                    android:drawablePadding="@dimen/size_20"
                    android:fontFamily="@font/font_noto_sans_kr_medium"
                    android:includeFontPadding="false"
                    android:gravity="center_horizontal"
                    android:text="@string/feed_no_result_data"
                    android:textColor="@color/color_707070"
                    android:textSize="@dimen/size_18"
                    android:visibility="@{viewModel.subscribeList.songSubsList.isEmpty(),default=gone}"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color_f9f9f9"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/size_20"
                    android:paddingTop="@dimen/size_20"
                    android:paddingEnd="@dimen/size_20"
                    android:paddingBottom="@dimen/size_20"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rv_subsc">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_membership_footer_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/noto_sans_kr_medium"
                        android:includeFontPadding="false"
                        android:textSize="@dimen/size_18"
                        app:htmlText="@{@string/membership_footer_title}"
                        app:textViewBgColor="@color/color_00000000"
                        app:textViewTxtColor="@color/color_222222"
                        tools:text="@string/membership_footer_title" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_membership_footer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/noto_sans_kr_light"
                        android:includeFontPadding="false"
                        android:textSize="@dimen/size_15"
                        app:htmlText="@{@string/membership_footer}"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_membership_footer_title"
                        app:textViewBgColor="@color/color_00000000"
                        app:textViewTxtColor="@color/color_222222"
                        tools:text="@string/membership_footer" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:gravity="left"
                        android:orientation="vertical"
                        android:weightSum="2">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/noto_sans_kr_light"
                                android:gravity="center_horizontal"
                                android:includeFontPadding="false"
                                android:lineSpacingExtra="7dp"
                                android:text="@string/memberShip_footer_terms1"
                                android:textColor="@color/color_8c8c8c"
                                android:textSize="15dp"
                                android:textStyle="normal"
                                app:textViewBgColor="@color/color_00000000" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tv_terms"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/noto_sans_kr_medium"
                                android:gravity="center_horizontal"
                                android:includeFontPadding="false"
                                android:lineSpacingExtra="7dp"
                                android:text="@string/common_login_popup_signing_up_info_text_agree"
                                android:textColor="@color/color_2fc2ff"
                                android:textSize="15dp"
                                android:textStyle="normal"
                                app:turtleClick="@{()->viewModel.requestDetailTerms(EtcTermsType.LOGIN_AGREE)}" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/noto_sans_kr_light"
                                android:gravity="center_horizontal"
                                android:includeFontPadding="false"
                                android:lineSpacingExtra="7dp"
                                android:text="@string/common_login_popup_signing_up_info_text_string2"
                                android:textColor="@color/color_8c8c8c"
                                android:textSize="15dp"
                                android:textStyle="normal" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tv_privacy_policy"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/noto_sans_kr_medium"
                                android:gravity="center_horizontal"
                                android:includeFontPadding="false"
                                android:lineSpacingExtra="7dp"
                                android:text="@string/common_login_popup_signing_up_info_text_privacy"
                                android:textColor="@color/color_2fc2ff"
                                android:textSize="15dp"
                                android:textStyle="normal"
                                app:turtleClick="@{()->viewModel.requestDetailTerms(EtcTermsType.LOGIN_PERSONAL)}" />

                        </LinearLayout>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/noto_sans_kr_light"
                            android:gravity="center_horizontal"
                            android:includeFontPadding="false"
                            android:lineSpacingExtra="7dp"
                            android:text="@string/memberShip_footer_terms2"
                            android:textColor="@color/color_8c8c8c"
                            android:textSize="15dp"
                            android:textStyle="normal" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/size_0_5"
                        android:layout_marginTop="20dp"
                        android:background="@color/color_eaeaea"
                        app:layout_constraintBottom_toBottomOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_tj_footer_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/size_20"
                        android:fontFamily="@font/noto_sans_kr_medium"
                        android:includeFontPadding="false"
                        android:text="@string/membership_tj_footer_title"
                        android:textSize="@dimen/size_12"
                        app:textViewBgColor="@color/color_00000000"
                        app:textViewTxtColor="@color/color_707070"
                        tools:text="@string/membership_tj_footer_title" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_tj_footer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/size_50"
                        android:fontFamily="@font/noto_sans_kr_light"
                        android:includeFontPadding="false"
                        android:lineSpacingExtra="0dp"
                        android:textSize="@dimen/size_12"
                        app:htmlText="@{@string/membership_tj_footer}"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_membership_footer_title"
                        app:textViewBgColor="@color/color_00000000"
                        app:textViewTxtColor="@color/color_707070"
                        tools:text="@string/membership_tj_footer" />

                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>