<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_32"
        android:layout_marginRight="@dimen/size_32"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.verse.app.widget.views.CustomLinearLayout
            android:id="@+id/llContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_22"
            android:background="@color/white"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:linearLayoutBgColor="@color/white"
            app:linearLayoutCorner="@dimen/size_20">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_20"
                android:layout_marginTop="@dimen/size_45"
                android:layout_marginRight="@dimen/size_20">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etLink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edit_link"
                    android:fontFamily="@font/font_noto_sans_kr_medium"
                    android:hint="@string/lounge_write_link_hint"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/size_14"
                    android:paddingTop="@dimen/size_10"
                    android:paddingRight="@dimen/size_14"
                    android:paddingBottom="@dimen/size_10"
                    android:textSize="@dimen/size_15"
                    android:textColor="@color/black"
                    android:textColorHint="@color/color_adadad"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivRemove"
                    android:layout_width="@dimen/size_20"
                    android:layout_height="@dimen/size_20"
                    android:layout_marginRight="@dimen/size_14"
                    android:src="@drawable/ic_input_close"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/etInvalidLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/size_5"
                android:fontFamily="@font/font_noto_sans_kr_light"
                android:includeFontPadding="false"
                android:text="@string/lounge_write_link_invalid"
                android:textColor="@color/color_ff3d33"
                android:textSize="@dimen/size_13"
                android:visibility="invisible"
                tools:visibility="visible" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_50"
                android:layout_marginTop="@dimen/size_36">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvCancel"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/color_f4f4f4"
                    android:fontFamily="@font/font_noto_sans_kr_medium"
                    android:gravity="center"
                    android:text="@string/str_cancel"
                    android:textColor="@color/black" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvConfirm"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/color_2fc2ff"
                    android:fontFamily="@font/font_noto_sans_kr_medium"
                    android:gravity="center"
                    android:text="@string/str_confirm"
                    android:textColor="@color/white" />


            </androidx.appcompat.widget.LinearLayoutCompat>

        </com.verse.app.widget.views.CustomLinearLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivLink"
            android:layout_width="@dimen/size_44"
            android:layout_height="@dimen/size_44"
            android:src="@drawable/ic_link"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>